<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>kwee</groupId>
  <artifactId>aggregator</artifactId>
  <version>1.1.0.3</version>
  <packaging>pom</packaging>
  <name>Aggregator</name>

  <modules>
    <module>library</module>
    <module>ing2ofx</module>
    <module>garminSummary</module>
    <module>gnucashcharts</module>
    <module>replaceTool</module>
    <module>ofxviewer</module>
    <module>osmmapper</module>
	<module>emailsender</module>
    <module>ios_password</module>
<!--    <module>reformat</module> -->
    <module>thunderbirdrulesort</module>
  </modules>
  
  <properties>
    <project.inceptionYear>2025</project.inceptionYear>

    <kweeLibrary.version>1.1.0.4</kweeLibrary.version>
    <kweeIng2Ofx.version>1.1.0.3</kweeIng2Ofx.version> 
    <kweeEmailSender.version>0.0.1.0</kweeEmailSender.version> 

    <maven.min.version>3.6.3</maven.min.version>
  
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.url>tools</project.url>

    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
    <maven.compiler.source>22</maven.compiler.source>
    <maven.compiler.target>22</maven.compiler.target>

    <maven.test.failure.ignore>true</maven.test.failure.ignore>
    <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
    <maven-resources-plugin.version>3.0.1</maven-resources-plugin.version>
    <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
    <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
    <maven-site-plugin.version>3.21.0</maven-site-plugin.version>
    <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
    <maven-surefirereport-plugin.version>3.4.0</maven-surefirereport-plugin.version>
    <maven-antrun-pluginversion>3.1.0</maven-antrun-pluginversion>

    <jpackage-maven-plugin.version>1.7.1</jpackage-maven-plugin.version>
 	<junit.version>4.13.2</junit.version>
    
	<assertj.version>3.11.1</assertj.version>
  	<assertj-core.version>3.17.1</assertj-core.version>
  	<assertj-swing.version>3.17.1</assertj-swing.version>
  	<assertj-swing-test.version>3.17.1</assertj-swing-test.version>
  
    <launch4j-maven-plugin.version>2.6.0</launch4j-maven-plugin.version>
    <jsign-maven-plugin.version>7.3</jsign-maven-plugin.version>
	<versions-maven-plugin.version>2.18.0</versions-maven-plugin.version>
    <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
   
    <miglayout.version>3.7.4</miglayout.version>
	
    <javafx.version>27</javafx.version>
    <javafx-graphics.version>27</javafx-graphics.version>
    <javafx-controls.version>27</javafx-controls.version>

    <com-webcohesion-ofx4j.version>1.39-SNAPSHOT</com-webcohesion-ofx4j.version>
    <slf4j.version>2.0.19</slf4j.version>
    <log4j-slf4j-impl.version>2.26.1</log4j-slf4j-impl.version>
    
    <org-apache-poi-poi.version>5.5.1</org-apache-poi-poi.version>
    <org-apache-poi-ooxml.version>5.5.1</org-apache-poi-ooxml.version>

    <org-apache-pdfbox-pdfbox.version>3.0.8</org-apache-pdfbox-pdfbox.version>
    <com-itextpdf-itextpdf.version>5.5.13.6</com-itextpdf-itextpdf.version>
    <org-jsoup-jsoup.version>1.23.2</org-jsoup-jsoup.version>
	
    <org-json-json.version>20260814</org-json-json.version>
    <io-jenetics-jpx.version>4.0.1</io-jenetics-jpx.version>
    <fr-dudie-nominatim-api.version>3.4</fr-dudie-nominatim-api.version>

	<!-- ing2ofx-->
    <com-opencsv.version>5.12.0</com-opencsv.version>
    <commons-io.version>2.22.0</commons-io.version>
    <commons-collections.version>3.2.2</commons-collections.version>
    <commons-collections4.version>4.6.0</commons-collections4.version>
    <org-javassist.version>3.33.0-GA</org-javassist.version>
    <com-sun-xml-bind.version>4.0.9</com-sun-xml-bind.version>
    <jakarta-xml-bind.version>4.0.2</jakarta-xml-bind.version>
    <jaxb2-maven-plugin.version>3.2.0</jaxb2-maven-plugin.version>
    <org-eclipse-core-resources.version>3.24.100</org-eclipse-core-resources.version>
    <org-eclipse-core-runtime.version>3.35.0</org-eclipse-core-runtime.version>

    <!-- Garminsummary -->
    <io-jenitics-gpx.version>4.0.1</io-jenitics-gpx.version>

    <!-- GNUCashCharts -->
    <gnucash-api.version>1.1.0-SNAPSHOT</gnucash-api.version> 
    <ch-qos-logback.version>1.6.3</ch-qos-logback.version>
	
    <!-- eMailSenderPro -->
    <com.fasterxml.jackson.core.version>2.22.2</com.fasterxml.jackson.core.version> 
    <jakarta-mail.version>2.0.2</jakarta-mail.version>
    <jakarta-activation.version>2.0.1</jakarta-activation.version>
    <com-formdev-flatlaf.version>3.7.2</com-formdev-flatlaf.version>
    <org-apache-commons-commons-csv.version>1.14.1</org-apache-commons-commons-csv.version>

    <!-- OSMMapper -->
	<org-openstreetmap-gui-jmapviewer.version>2.1</org-openstreetmap-gui-jmapviewer.version>
    <com.twelvemonkeys.imageio.imageio-jpeg.version>3.9.4</com.twelvemonkeys.imageio.imageio-jpeg.version>
  </properties>
  
  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2</url>
    </repository>
    <repository>
      <id>mvn-repo</id>
      <url>https://github.com/RSHKwee/library/releases</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>
  
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

 	<!-- https://mvnrepository.com/artifact/com.miglayout/miglayout -->
    <dependency>
	  <groupId>com.miglayout</groupId>
	  <artifactId>miglayout</artifactId>
	  <version>${miglayout.version}</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx</artifactId>
      <version>${javafx.version}</version>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-graphics</artifactId>
      <version>${javafx-graphics.version}</version>
      <classifier>win</classifier>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx-controls.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx-controls.version}</version>
    </dependency>
    <!-- AssertJ Swing -->
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-swing-junit</artifactId>
      <version>${assertj-swing-test.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-swing</artifactId>
      <version>${assertj-swing.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj-core.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  
  <build>
    <plugins>
        <!-- Library -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>${maven-enforcer-plugin.version}</version> <!-- Gebruik een geschikte versie van de plugin -->
          <executions>
            <execution>
              <id>enforce-maven-version</id>
              <goals>
                <goal>enforce</goal>
              </goals>
              <configuration>
                <rules>
                  <requireMavenVersion>
                    <version>${maven.min.version}</version> <!-- Minimale Maven-versie vereist -->
                  </requireMavenVersion>
                </rules>
                <fail>false</fail> <!-- Niet Stoppen de build bij niet-naleving -->
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
          <configuration>
            <source>${maven.compiler.source}</source>
            <target>${maven.compiler.target}</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>${maven-site-plugin.version}</version>
          <configuration>
            <site>
             <id>default</id>
             <url>${project.url}</url>
            </site>
          </configuration>
          <executions>
            <execution>
              <id>attach-site</id>
              <goals>
                <goal>site</goal>
              </goals>
              <phase>post-integration-test</phase>
            </execution>
          </executions>    
        </plugin>
        <plugin>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-maven-plugin</artifactId>
          <version>0.0.8</version>
          <configuration>
            <mainClass>your.main.Class</mainClass>
            <options>
              <option>--enable-native-access=ALL-UNNAMED</option>
            </options>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
          <configuration>
            <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
            <testFailureIgnore>true</testFailureIgnore>
            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
            <summaryFile>${project.build.directory}/surefire-reports/summary.txt</summaryFile>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${versions-maven-plugin.version}</version> <!-- Controleer voor de laatste versie -->
        </plugin>
    </plugins>
   <!--   <directory>f:/temp/local_target/${project.artifactId}</directory>   -->
  </build>
  
  <reporting>
	<plugins>
	  <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-surefire-report-plugin</artifactId>
		  <version>${maven-surefirereport-plugin.version}</version>
          <reportSets>
                <reportSet>
                    <id>aggregated-unit-test-report</id>
                    <configuration>
                      <outputDirectory>${project.reporting.outputDirectory}/test-reports/ut</outputDirectory>
                      <linkXRef>true</linkXRef>
                      <aggregate>true</aggregate>
                    </configuration>
                    <reports>
                      <report>report-only</report>
                    </reports>
                </reportSet>
            </reportSets>
		</plugin>
	</plugins>
  </reporting>
  
  <distributionManagement>
    <!-- Upload to Github v-->
    <repository>
      <id>github</id>
      <name>GitHub Packages</name>
      <url>https://maven.pkg.github.com/RSHKwee/aggregator</url>
    </repository>
    <!-- Upload to Github ^-->
  </distributionManagement>
</project>
